Revision history for Mojolicious-Plugin-BootstrapHelpers

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]

 [Enhancements]

 [Meta]

 [New Features]

 [Revision]

0.0183 2014-09-25T22:36:02Z CEST
 [Documentation]
 - Added |item| description.
 - Improved |link| description.

0.0182 2014-09-24T18:34:20Z CEST
 [Meta]
 - Cleanup

0.0181 2014-09-23T19:48:36Z CEST
 [Documentation]
 - Formatting and minor improvements.

0.0180 2014-09-23T19:30:12Z CEST
 [Enhancements]
 - Finalized (for now) navbar syntax
 - Improved dropdown (and similar) syntax
 - Input groups can (again) take button groups.
 - Navs can (again) take dropdowns.

 [Meta]
 - String::Random new prereq

0.0176 2014-09-23T00:31:21Z CEST
 [API Changes]
 - Input groups can't currently take button groups.
 - Navs can't currently take dropdowns.

 [Documentation]
 - Note that some syntax descriptions are currently inaccurate. See
   examples for current syntax.

 [Enhancements]
 - More work on streamlining menu syntax.

0.0175 2014-09-21T23:35:05Z CEST
 [Enhancements]
 - Slightly improved syntax for forms in navbar (urls now in array ref like
   elsewhere).
 - Navs in navbar can be right-ed.

0.0174 2014-09-20T23:06:25Z CEST
 [Enhancements]
 - Improved navbar support (see examples)

0.0173 2014-09-19T23:50:31Z CEST
 [Documentation]
 - Fixed some internal links.
 - Fixed pod typo under init_short_strappings.

 [Enhancements]
 - Support for nav pills and nav tabs (undocumented)
 - Partial support for navbar (also undocumented)

0.0172 2014-09-17T22:51:58Z CEST
 [API Changes]
 - Actually removed input-group behaviour from form-group (it had already
   been deprecated and de-documented).

 [Documentation]
 - Introduces the |...| syntax definition syntax.

 [Enhancements]
 - Added toolbar support.
 - Added input group support.

 [Meta]
 - Add DZP::PkgVersion::Block to build dependencies.

0.0171 2014-09-16T23:11:42Z CEST
 [Documentation]
 - Synopsis contained a partially deprecated example.

 [Enhancements]